README: update gpg key

--- a/README
+++ b/README
@@ -25,16 +25,8 @@ ________________________________________________________________________________
 
 Import this key simply by:
 
-Save the below code block to a file, like dilyn-pub.asc
-gpg --import dilyn-pub.asc
+gpg --keyserver keys.gnupg.net --recv-key DA4AB731D4C3F13D
 
-Trust the key:
-gpg --edit-key dilyn.corner@tutanota.com
-> trust
-> [1-5]
-
-OR
-echo trusted-key DA4AB731D4C3F13D >> /root/.gnupg/gpg.conf
 
 -----BEGIN PGP PUBLIC KEY BLOCK-----
 
@@ -56,23 +48,33 @@ OZ6IAkov2YnfUqEBjok979V1M2X2BcKNi/ojDB/dy9DusHNJLsX4RH5PEt3N0W1a
 H2fRPQaiSQA/XL3QGgh+C+BYwdCxCHPsX41EvadnT27ms0SxeSk6RCpAwB26tA8O
 ueHYEEVRSRJCakOsidP4uomJAxYlPj35zvvYAfEcyMYc3ts3Xd/6FjpGHRYBhNv9
 BuIPvKvQaDepnd4MLXiddhNkMxOa38VxX3Y1xyi5QTAdEfyzMvuftUYS7q4xL/P1
-TYE2sdI3LG36TDx6qrkBjQRciFDEAQwAyC8EcDVfoxQB4UBYXJltSwsLe2azNaZq
-w+fQbk4jJKv9bNwwm+QFxGrcSLsacqStbkETO8QKC1Qv/9MDDC/2qklD4joyzcGF
-KnOUFncOcvemf1cwoEgYSebPZH8VPmZj7e8jLo170IOR0qr44rd0tP0PElM3IFXB
-+Z6YFR1Z/nV5gLLf4igZpcgFcKIhLW0/jLoykix+fW091SlyL2VopLJJrrVMJa19
-eoUdOt9OQ2z3Vl+oTkQ6RWD0ZNrP6Ty8I6+2FUxVQuRjb0n9JLHmN6mkzlm3Fxuz
-MpmqZH7ylxQ16pkOUODRAkpUAnAmVTfIFiKhfPm46pHKuuY8g11ju2AJG5wvjwU4
-pLPnoR0BsNMPofh+158wF3d/fs2rfmb+taZeRixKsSZ8lLps6lyM905tFpZpc2oG
-5p4rrqTY86Q5tS3IwrYydDfh5aUQz6J8Yqdz/fo0iTkrzAkstdHQv5xBiZBOuq0l
-kNQOVrovk8L+yLmloP4VucElkbzmGbK7ABEBAAGJAZ8EGAEKAAkFglyIUMQCmwwA
-CgkQ2kq3MdTD8T0qWQv9Gv5rGHL/gcVW199YZB1LikIDNmjxmV177BV4Lgx+ac+E
-VEamLWcpbqHmpGn9K/UPg3KqxpQmxjOcBdR0l9UcioVtfj7y7/vgRi866g3/OuUH
-+vmNpLhAK8krURCOX04La3geybyAXIZT6blQa1KylE2KLeqjsJUkjoVPv9uZIoTn
-IEaY8LCshsQzUmBgq20ZuhsVyVyxmbBeMePkhR1trf5JTi3mI1X66AdGLHFHczhR
-noxlXNrfjqR5iRoG3070gU6KoOyWK/6zeIJfEPDkP5zsE6aRYeoSiNj47Frl2sHr
-/F94XrhKPeDTTmlai+XuuZrlnyXjwVdfqsEf5w8Va1pMMBQt8ux6qkUpxZzjy/ih
-3pV4BKDdGV4NQO9VKBwwQHKYi6T295rBaQ+2Z0ey0kDnCfWdb9/HHMc2YZSQflBg
-dxrnnFiK8wnADPGA3fzL/9F+fNysX9Ypg2N7pkTbvz7WOqhgDf3D+jXteVUxgq9K
-FTjDC7NBgOvvveXb5ccd
-=j6ND
+TYE2sdI3LG36TDx6qrQpRGlseW4gQ29ybmVyIDxkaWx5bi5jb3JuZXJAazFzc2xp
+bnV4Lm9yZz6JAbgEEwECACIFAmB5tAgCGwMGCwkIBwMCBhUIAgkKCwQWAgMBAh4B
+AheAAAoJENpKtzHUw/E9qKMMALIWkHafXs1aaDAM2sXXfYUPQVrFWmRiaM/eAKBY
+l2KBJw124Wa8SQzRDu/IHxQffDqVn8ShURocUWqXpJepjOnBGb1y5FViUME9hSRS
+cxn+14xPHquRQMUCUvCHU48HjcDFOTXBzmA8oezuRO/pzqWJhVFaHWl+M/j15l1C
+I5k/hZ/Kv9Mja9lSoMYGHZ/v2+OzLWtXR9qfdQn81AkWNgj8cuR+VuHgxD0g51i+
+hsTXJ35vQ6Wghoh7LXNlj3RShsR+dU5E/6HJlpYVsPve/x7CUWGENO7FAQYN0eFr
+rrXg6uq8dT1SzHR276yUcienm7YkEoKhEhYOhPc0EYQswCoDrDvMTWMNsT7cZ8fP
+S+sbtIiZNAs/Qz4UFzZKVjq/i7LCItqQjJNAHgd8lUQik3J7P0K5v3xicmjM3ri0
+MlPVshcnIc8GF6H54Fq6mcQ8biI7oPzKG62NuMi8GqLTYWVxP+f0yICobyQmB8dx
+zSZA7mZTlgG0TVyPxOyqUv+7mbkBjQRciFDEAQwAyC8EcDVfoxQB4UBYXJltSwsL
+e2azNaZqw+fQbk4jJKv9bNwwm+QFxGrcSLsacqStbkETO8QKC1Qv/9MDDC/2qklD
+4joyzcGFKnOUFncOcvemf1cwoEgYSebPZH8VPmZj7e8jLo170IOR0qr44rd0tP0P
+ElM3IFXB+Z6YFR1Z/nV5gLLf4igZpcgFcKIhLW0/jLoykix+fW091SlyL2VopLJJ
+rrVMJa19eoUdOt9OQ2z3Vl+oTkQ6RWD0ZNrP6Ty8I6+2FUxVQuRjb0n9JLHmN6mk
+zlm3FxuzMpmqZH7ylxQ16pkOUODRAkpUAnAmVTfIFiKhfPm46pHKuuY8g11ju2AJ
+G5wvjwU4pLPnoR0BsNMPofh+158wF3d/fs2rfmb+taZeRixKsSZ8lLps6lyM905t
+FpZpc2oG5p4rrqTY86Q5tS3IwrYydDfh5aUQz6J8Yqdz/fo0iTkrzAkstdHQv5xB
+iZBOuq0lkNQOVrovk8L+yLmloP4VucElkbzmGbK7ABEBAAGJAZ8EGAEKAAkFglyI
+UMQCmwwACgkQ2kq3MdTD8T0qWQv9Gv5rGHL/gcVW199YZB1LikIDNmjxmV177BV4
+Lgx+ac+EVEamLWcpbqHmpGn9K/UPg3KqxpQmxjOcBdR0l9UcioVtfj7y7/vgRi86
+6g3/OuUH+vmNpLhAK8krURCOX04La3geybyAXIZT6blQa1KylE2KLeqjsJUkjoVP
+v9uZIoTnIEaY8LCshsQzUmBgq20ZuhsVyVyxmbBeMePkhR1trf5JTi3mI1X66AdG
+LHFHczhRnoxlXNrfjqR5iRoG3070gU6KoOyWK/6zeIJfEPDkP5zsE6aRYeoSiNj4
+7Frl2sHr/F94XrhKPeDTTmlai+XuuZrlnyXjwVdfqsEf5w8Va1pMMBQt8ux6qkUp
+xZzjy/ih3pV4BKDdGV4NQO9VKBwwQHKYi6T295rBaQ+2Z0ey0kDnCfWdb9/HHMc2
+YZSQflBgdxrnnFiK8wnADPGA3fzL/9F+fNysX9Ypg2N7pkTbvz7WOqhgDf3D+jXt
+eVUxgq9KFTjDC7NBgOvvveXb5ccd
+=ERKU
 -----END PGP PUBLIC KEY BLOCK-----
