--- a/README
+++ b/README
@@ -1,80 +1,15 @@
 |/
-|\ISS                                                      https://k1sslinux.org
+|\ISS LINUX                                                https://kisslinux.xyz
 ________________________________________________________________________________
 
 
-Official Repositories
+Unofficial Libressl+Xorg Main Repository
 ________________________________________________________________________________
 
-The official repositories for KISS Linux maintained by kiss-community.
+The officially unofficial repository for KISS Linux maintained by kiss-community
 
 More information:
 
-    - https://k1sslinux.org
-    - https://k1sslinux.org/package-system
+    - https://kisslinux.xyz
+    - https://kisslinux.xyz/package-system
     - https://repology.org/repository/kiss_main
-
-Signature Verification
-________________________________________________________________________________
-
-Enabling signature verification: https://k1sslinux.org/install#4.0
-
-
-Dilyn Corner's public key:
-________________________________________________________________________________
-
-Import this key simply by:
-
-gpg --keyserver keys.gnupg.net --recv-key DA4AB731D4C3F13D
-
-
------BEGIN PGP PUBLIC KEY BLOCK-----
-
-mQGNBFyIUMQBDAC1a6sBoSbRq6SPpJ5SdR0/X1Z2P4hYnBHJ1x1tPvSNMoPdbhza
-doAN4M2yvLLyhZt13gAGqzgXhWkI+/mzdr3MCZIgKLOnU/P3VXvy6cT6zMHCa06I
-udVW8bA5ao6Xs5Gw9x3iJl/IwWjF9b2PaQlugT/iiq8I3mKCxpXxBBk1rO/HOSXz
-g/ZjCF5cOmuk09l4HK3BSl4+xQrhTVyKog7p7Fv724+Y5M/impbZBTSdZIzV7EKD
-dAo4I9dUNfeEypyvzsMzP+1faP3dUotDcAh6GQCOfbC6iCr0CBXwl8tcfAq98IQO
-dj2Cgx5kZ1zy3RUA/9UHrIcyZ9Ki8PTDjeGVJn+2Ep9a4RGjR1geeF1YF+qTAJdO
-HPdWApM58egCPS6IplEtr6BjjnkMXsqxDf8Ds5lrIgHs35GHpU5sO7qFriYVe+3S
-dYCwyE/Rcz8UM5jM5XeU8EkqfDCVSxECSbV2IZrU/z35Sea3rjh2HYNp9Ga3GGKS
-fdJEKgheZs4vFD8AEQEAAbQoRGlseW4gQ29ybmVyIDxkaWx5bi5jb3JuZXJAdHV0
-YW5vdGEuY29tPokBsAQTAQoAGgQLCQgHAhUKAhYBAhkBBYJciFDEAp4BApsDAAoJ
-ENpKtzHUw/E9XX0L/iUd6Ku1trucMltf90UCHVduRylQ3hHdR5KEcBtuk1W0zi/1
-GyDnrliwGa3JvTNOtp3W3JwSF2Bk0zUqr01ZExcUORvVJfxZI/ykeunpqJyQEQMw
-2IAUpE1RNCZgdBMpT5A6fKkXNVmhWS108DxDg/xfDuwJCGu8/PJ6ECuoq7ibKcaH
-RtSacdJ93pDycszbnJVn3NX2gkkgT6thM5R3brgc+4W1sSq+otSF8srM1kh1g6w4
-OZ6IAkov2YnfUqEBjok979V1M2X2BcKNi/ojDB/dy9DusHNJLsX4RH5PEt3N0W1a
-H2fRPQaiSQA/XL3QGgh+C+BYwdCxCHPsX41EvadnT27ms0SxeSk6RCpAwB26tA8O
-ueHYEEVRSRJCakOsidP4uomJAxYlPj35zvvYAfEcyMYc3ts3Xd/6FjpGHRYBhNv9
-BuIPvKvQaDepnd4MLXiddhNkMxOa38VxX3Y1xyi5QTAdEfyzMvuftUYS7q4xL/P1
-TYE2sdI3LG36TDx6qrQpRGlseW4gQ29ybmVyIDxkaWx5bi5jb3JuZXJAazFzc2xp
-bnV4Lm9yZz6JAbgEEwECACIFAmB5tAgCGwMGCwkIBwMCBhUIAgkKCwQWAgMBAh4B
-AheAAAoJENpKtzHUw/E9qKMMALIWkHafXs1aaDAM2sXXfYUPQVrFWmRiaM/eAKBY
-l2KBJw124Wa8SQzRDu/IHxQffDqVn8ShURocUWqXpJepjOnBGb1y5FViUME9hSRS
-cxn+14xPHquRQMUCUvCHU48HjcDFOTXBzmA8oezuRO/pzqWJhVFaHWl+M/j15l1C
-I5k/hZ/Kv9Mja9lSoMYGHZ/v2+OzLWtXR9qfdQn81AkWNgj8cuR+VuHgxD0g51i+
-hsTXJ35vQ6Wghoh7LXNlj3RShsR+dU5E/6HJlpYVsPve/x7CUWGENO7FAQYN0eFr
-rrXg6uq8dT1SzHR276yUcienm7YkEoKhEhYOhPc0EYQswCoDrDvMTWMNsT7cZ8fP
-S+sbtIiZNAs/Qz4UFzZKVjq/i7LCItqQjJNAHgd8lUQik3J7P0K5v3xicmjM3ri0
-MlPVshcnIc8GF6H54Fq6mcQ8biI7oPzKG62NuMi8GqLTYWVxP+f0yICobyQmB8dx
-zSZA7mZTlgG0TVyPxOyqUv+7mbkBjQRciFDEAQwAyC8EcDVfoxQB4UBYXJltSwsL
-e2azNaZqw+fQbk4jJKv9bNwwm+QFxGrcSLsacqStbkETO8QKC1Qv/9MDDC/2qklD
-4joyzcGFKnOUFncOcvemf1cwoEgYSebPZH8VPmZj7e8jLo170IOR0qr44rd0tP0P
-ElM3IFXB+Z6YFR1Z/nV5gLLf4igZpcgFcKIhLW0/jLoykix+fW091SlyL2VopLJJ
-rrVMJa19eoUdOt9OQ2z3Vl+oTkQ6RWD0ZNrP6Ty8I6+2FUxVQuRjb0n9JLHmN6mk
-zlm3FxuzMpmqZH7ylxQ16pkOUODRAkpUAnAmVTfIFiKhfPm46pHKuuY8g11ju2AJ
-G5wvjwU4pLPnoR0BsNMPofh+158wF3d/fs2rfmb+taZeRixKsSZ8lLps6lyM905t
-FpZpc2oG5p4rrqTY86Q5tS3IwrYydDfh5aUQz6J8Yqdz/fo0iTkrzAkstdHQv5xB
-iZBOuq0lkNQOVrovk8L+yLmloP4VucElkbzmGbK7ABEBAAGJAZ8EGAEKAAkFglyI
-UMQCmwwACgkQ2kq3MdTD8T0qWQv9Gv5rGHL/gcVW199YZB1LikIDNmjxmV177BV4
-Lgx+ac+EVEamLWcpbqHmpGn9K/UPg3KqxpQmxjOcBdR0l9UcioVtfj7y7/vgRi86
-6g3/OuUH+vmNpLhAK8krURCOX04La3geybyAXIZT6blQa1KylE2KLeqjsJUkjoVP
-v9uZIoTnIEaY8LCshsQzUmBgq20ZuhsVyVyxmbBeMePkhR1trf5JTi3mI1X66AdG
-LHFHczhRnoxlXNrfjqR5iRoG3070gU6KoOyWK/6zeIJfEPDkP5zsE6aRYeoSiNj4
-7Frl2sHr/F94XrhKPeDTTmlai+XuuZrlnyXjwVdfqsEf5w8Va1pMMBQt8ux6qkUp
-xZzjy/ih3pV4BKDdGV4NQO9VKBwwQHKYi6T295rBaQ+2Z0ey0kDnCfWdb9/HHMc2
-YZSQflBgdxrnnFiK8wnADPGA3fzL/9F+fNysX9Ypg2N7pkTbvz7WOqhgDf3D+jXt
-eVUxgq9KFTjDC7NBgOvvveXb5ccd
-=ERKU
------END PGP PUBLIC KEY BLOCK-----
