--- a/README
+++ b/README
@@ -1,5 +1,5 @@
 |/
-|\ISS LINUX                                                https://kisslinux.xyz
+|\ISS LINUX                                                https://kisslinux.org
 ________________________________________________________________________________
 
 
@@ -10,6 +10,6 @@ The officially unofficial repository for KISS Linux maintained by kiss-community
 
 More information:
 
-    - https://kisslinux.xyz
-    - https://kisslinux.xyz/package-system
+    - https://kisslinux.org
+    - https://kisslinux.org/package-system
     - https://repology.org/repository/kiss_main
