--- a/README
+++ b/README
@@ -13,3 +13,63 @@ More information:
     - https://kisslinux.org
     - https://kisslinux.org/package-system
     - https://repology.org/repository/kiss_main
+
+Signature Verification
+________________________________________________________________________________
+
+Enabling signature verification: https://kisslinux.org/install#3.0
+
+Kyryl Melekhin public key:
+________________________________________________________________________________
+
+-----BEGIN PGP PUBLIC KEY BLOCK-----
+
+mQINBGEHMqkBEADCeoR7R0jRTKEV413Bld3OEhHPxCXedUka8/pwG4MiVT8C8ODp
+AahGmBGWOlJEMLsqKtENTpzZxIFMilTLjEt8l3oevTDYSFbssQy5RscivC4XAQ8N
+pxxXSP31oH3a4qRdHS+pZJN6JbAUqKDGg4yW59EEYFkzrv6GdNLC3sV94P65hPYD
+PSvvOZOm0Rs+F/O0BM0SKN4v1Bocbui+aTKFKsFd+Xz4o1g5rXfyhd5fkUiwyJT3
+rmS1QCCo5Xy6dAOB+EkpHT+t4EnE1HqXvKcRFFXqRVR3UNhNkc9K0FKd0AsWekq/
+7vMFP+z63G91A3NmGa+QH2Xk75+zZzY2Z4SVlUuJeFXUDu5NEzBp22Hkm8MGRQls
+5xSaCrFyVBLFtX7+zPlYHYAtFq9Xcu0lEUgcV8ROChmwkK770PJtWXX0jz1shj4B
+ucJTX4wCDMjAjXH+gAu1Qh5kn2nH1a0ngXNGCAHlwrhXMGoP4guEdPQaXlR4w2T0
+7Xya/3sw6pPIOqFP+Ykkb0AbeNLqYN1MiU9nxQu4bWGuRnOi9v4vAG7kIyryuvgO
+VWOQxion1zLsORpxYgRzzE7lX26pothUI69LWxnl/U9gs0djcNZ+0E4J0Pfzx5a8
+c1zcRSucgS3hsXl7zCiNeA+d0GEDfNGhf45/up3JxsyZDYcbPmMxShKhbwARAQAB
+tCVLeXJ5bCBNZWxla2hpbiA8ay5tZWxla2hpbkBnbWFpbC5jb20+iQI4BBMBAgAi
+BQJhBzKpAhsDBgsJCAcDAgYVCAIJCgsEFgIDAQIeAQIXgAAKCRC+1CV3fPZknBJO
+D/45p6V3VIdbH2N0z+qs5nRToNFm4OMFsS8oTK4zrYgl36J6VJ+g5zR7ICwRAwxV
+pRF9qkVZ473Aek+ZsqzWY1fFTRK5DgS5tbweEPjOAe1HqM/1fLAJ6WK4DL4RTIyq
+O1sz2Ov0hYRmKeTre4J9Icvej0BCdDLF2PTiHpQixUsHOk7mYeNR/uCK3RybKdr8
+dz/Mg8AMbpWOjPlPuPL5wetFISJIVCb1KH9eOE5N2Sr/buYJJ0XDkXlPszI96P1n
+TlzcHNmiPR6tFDIs0jG1CmmtiaVwJcEuAywBvbKOuhpOZTxVSgrQEegI7rm80aF5
+fggu3HZblcGD/7tQLRCG7q7dSUTFTl9KI41IcAaCkeUmhkoMb8ZEUzlAaxEPwTN8
+n59wUzlvJAS2GKvikwnpAkEcTI/xdOw49BAnyE0qxa6aCmIX4ZlnvXifKFA4rJcG
+RbZ+ZlXRCtlCEMK/KXJUuwChuHWURnBEFqUSWu5sQjXO8OAKW6AddBaC/Xgt5e2d
+1D3E+503SLlCViBPo9r6iWsIZTm7Qup67xHoQSfg/LH3qpjL78PzRomJUZTJNJ9I
+y9xmCsrudQ2B2Ezn45606801olY9hWVbDxuOw/1RMgoSxcONRH6eIMyPOttArPPa
+VpRBSmB+dwDq432D3mziHWtGHq/jr99ilgpDgbcWuePi67kCDQRhBzKpARAAyY7R
+rd7kIUDlTALoDq+DxStwhGI8KkTIkaR1R1CPEC0xf/QWjQ5fEbsPH6F7nfB2uzu1
+9t3jrylWdP2O9H1r5rwb/uGWEwLKueDlIZGqjsTrlwBKvA126oUvypUzGw5pVv2z
+VZd9lAG1euOHMt0zI0j3YpAK8b8ssFfEp8OTA0GuwpN+zlYGUMf2rWnhGpDvhy54
+ZbKOBS8D+jgFm70vjwYR9BlmF3Alqxf+QO+Lo71qdE6PY9wsY94vOcWzx65yrCCj
+5JkpcemzzFHET02O1jKfaVCmulqx6R1wHAm7i/NjzkQg7EkKPnxwFwzmcSxj6mVm
+SyNwuKE92wyNKWV9ezYRDoIyUS7od4DY8QfxQS2M+YIiUjpu6CTTAcc0H9OTncmk
+dSvuxMEapxw5Xv1SetEf9O14Rn/0apeYhwD2oz6IoDAv5kmLnDqniX8hVe0OpdV2
+vHqLcCJoypNXhg/JZ/RLA0wp2d5BLaWBO2PtYxOahZgYC5EnRpMNrMupD0E60n8N
+Uy4FVolugtsBj91s8QZvA9sfZKiwyDmIr3yV4CRZ+yMzDMtc5Ys3POu+3DiE3LIE
+Y48cMRwP4qA3IYlKGp8C/x+8TmY7HlTNFoK7ChRUCcS0pivRH4FtM9FZG9O41M21
+2p4Kr9zjfz+4L0IOVEMkoXlwn8Wq35xtTLWYtjkAEQEAAYkCHwQYAQIACQUCYQcy
+qQIbDAAKCRC+1CV3fPZknJVHEAC45yo/jM52U0hz8ytyrrS7BSWBZKbOUfRJ4GZu
+tdhmamrGDyFMRo3dHKOix64YU3hw/Ve17BN6V8pVlxQwV1NT4gBGKofgvsCCcTJc
+HMQQbqzJ77qRH7qdqoxDewu48mgnyaxlg2cM8Qlx0Ax/BrJI/RH2uV1FtVmcx5ma
+g5VdfZD4ySPHogtKfvT7hxX5zb1wCF6aoxZBhMC9WMrNJbgmswks0o80afJelbZp
+Vdkieg1s9wZCYjZ+VdnCDxQDv9ddZmLakSk+SIZRv4PstZ+HyUXKLxDntY2gH3XW
+6mrPwhvIKtUoa2TNXUOzCv0eDJH7B7ETaudB6rygHgVAel52N5ue67p3LwRsD+ED
+dGhLyal1Ld31VfTz6ztyIFeXoe96txTlNVJErcHrBX2/odh2Yy12m4ykoCVxMKjZ
+mjqKaj8c0XKaq5+OLrUARDrKMOFS2fg4w82C7dbFY5N3bJcUT3H0BS8Rl/SmSxtT
+q9+NNFYAtK5inBdgl/nQVSiiC45uYnkcWgRXYCzHuSKPHFQAr3arW++vrR1jnAMJ
+xwsQY1E0m3pVGpBNrFLIlgks43+aMG1sCDveo4rtsbDSOnZDFKrHOjR1cwcm97jr
+Qy+vaanlKvJPa+ADVZ0qo1eCfonCaszmjgTnIPpef0ccgL0w7c+2z0HHKKTmVGHl
++3QHwQ==
+=fRc1
+-----END PGP PUBLIC KEY BLOCK-----
